# lcd_lib

./: .cproject  .gdb_history  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  fo.sh  gdb.sh  gdb.txt  hal_lcd_i2c.ioc  hal_lcd_i2c.launch  o.sh  of.sh  target.elf  target.map
.cache/clangd/index/: cmsis_compiler.h.004C0BC4D143CD6D.idx  cmsis_gcc.h.D3A27ED125467808.idx  cmsis_version.h.4E61C097699B6028.idx  core_cm3.h.6DE35E45B7C783A0.idx  exporter.h.AB119D3C5E18BB53.idx  i2c.c.799A7D3851853E98.idx  i2c.h.93682694C16874E4.idx  index.c.7FC804B7D925A816.idx  index.h.D33B5FF987FC3DBF.idx  lcd.c.B1DE70A61064E8AD.idx  lcd.h.4504F9FBA2035E9B.idx  main.c.2153A50EE0806CEE.idx  main.h.523E4E126FBBBE16.idx  mpu_armv7.h.E799BBC789EB0B35.idx  serial.c.84EF2A2316C46643.idx  serial.h.34BA21D737534EDD.idx  stm32_hal_legacy.h.084A1D8BCF861F29.idx  stm32l152xe.h.B97978BAC2DD5F28.idx  stm32l1xx.h.E1B43DFA6D959232.idx  stm32l1xx_hal.c.A799B19BEE8C73FB.idx  stm32l1xx_hal.h.2C6854B5115BCC53.idx  stm32l1xx_hal_conf.h.E721E4E2E2D86288.idx  stm32l1xx_hal_cortex.c.6285F937A5AC1608.idx  stm32l1xx_hal_cortex.h.7FB69E71531795D0.idx  stm32l1xx_hal_def.h.62ABF9A3D0EEF3A3.idx  stm32l1xx_hal_dma.c.CDCE1C880AEE77CD.idx  stm32l1xx_hal_dma.h.A7654DB0561CCD2B.idx  stm32l1xx_hal_exti.c.91A538593329AFBD.idx  stm32l1xx_hal_exti.h.F70ADDA4AC2FBEA0.idx  stm32l1xx_hal_flash.c.6540BB6F8A1C1AE9.idx  stm32l1xx_hal_flash.h.53C6191D5A4A0EF7.idx  stm32l1xx_hal_flash_ex.c.8FBB47A963E12ABE.idx  stm32l1xx_hal_flash_ex.h.F210E82F89A14DAC.idx  stm32l1xx_hal_flash_ramfunc.c.76011C74FAF04670.idx  stm32l1xx_hal_flash_ramfunc.h.C562A3978BC9A7F7.idx  stm32l1xx_hal_gpio.c.667D27D762D50A2F.idx  stm32l1xx_hal_gpio.h.3BECE0C9691FC1DA.idx  stm32l1xx_hal_gpio_ex.h.995DE2D53F7323EA.idx  stm32l1xx_hal_i2c.c.E0FE10DC1A46B036.idx  stm32l1xx_hal_i2c.h.4A1C6385A16D200D.idx  (+19 more)
Core/Inc/: exporter.h  index.h  main.h
Core/Inc/I2C/: i2c.h
Core/Inc/LCD/: lcd.h
Core/Inc/UART/: serial.h
Core/Src/: index.c  main.c  stm32l1xx_hal_msp.c
Core/Src/I2C/: i2c.c
Core/Src/LCD/: lcd.c
Core/Src/UART/: serial.c
Debug/: hal_lcd_i2c.elf  hal_lcd_i2c.list  hal_lcd_i2c.map  makefile  objects.list
Debug/Core/Src/: index.cyclo  index.d  index.su  main.cyclo  main.d  main.su  stm32l1xx_hal_msp.d  stm32l1xx_it.d  subdir.mk
